# rust-blog

./: .gitignore  Cargo.toml  README.md
src/: db.rs  error.rs  lib.rs  main.rs  templates.rs  utils.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/routes/: add_post.rs  fallback.rs  index.rs  login.rs  mod.rs  post.rs  register.rs
static/css/: styles.css
templates/: add_post.html  auth_error.html  base.html  index.html  internal_error.html  login.html  not_found.html  notfound.html  post.html  post_not_found.html  posts.html  register.html  user_not_found.html
