[package]
name = "rust-blog"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4.1.2"
argon2 = "0.5.3"
axum = "0.8.8"
chrono = "0.4.44"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
pulldown-cmark = "0.13.1"
rand_core = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tera = "1.20.1"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
